--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		================================= -->
 
 		<!-- GOOGLE FONTS -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
+		<!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">-->
 
 		<!-- LIBRARIES CSS -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -51,7 +51,7 @@
 
 			<!-- HEADER
 			================================= -->
-			<header id="header" class="header-section section section-dark navbar navbar-fixed-top">
+			<header id="header" class="header-section section section-dark navbar navbar-fixed-top" style="background: rgba(0,0,0,0.8);">
 
 				<div class="container-fluid">
 
@@ -89,7 +89,7 @@
 							<!--<li><a href="#faq">FAQ</a></li>-->
 
 							<!-- HEADER ACTION BUTTON -->
-							<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-primary">S'inscrire</a></li>
+							<!--<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-primary">S'inscrire</a></li>-->
 							<li class="header-action-button"><a target="_blank" href="http://hic2018.sparkboard.com" class="btn btn-primary">Les défis</a></li>
 							<!--<li class="header-action-button"><a target="_blank" href="http://2017.hackingindustry.camp" class="btn btn-primary">Édition 2017</a></li>-->
 							<a href="#" class="dropdown-toggle external language-choice" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-globe" style="font-size: 22px; vertical-align: -3px;"></i>&nbsp; FR <span class="caret"></span></a>
@@ -109,6 +109,23 @@
 					<img src="images/logos/AD-logo-132x132.png" alt="logo alsacedigitale" title="par AlsaceDigitale">
 				</a>
 			</div>
+
+			<section class="headline-section section-accent section" style="padding-bottom: 30px; padding-top: 90px;">
+
+				<div class="container">
+					
+					<div class="row">
+						<div class="col-md-10 col-md-offset-1">
+
+							<h3 class="text-center">Vous êtes sur l'archive de l'édition 2018 du Hacking Industry Camp</h3>
+
+							<div class="closing-buttons tada animated done-animation" target="_blank" data-animation="tada"><a href="http://hackingindustry.camp/" class="btn btn-lg btn-primary">Retourner sur HackingIndustry.camp</a></div>
+						</div>
+					</div>
+
+				</div>
+
+			</section>
 
 			<!-- HERO
 			================================= -->
@@ -232,11 +249,11 @@
 									<!--<img src="images/contents/amphi2.jpg" style="width: 100%" alt="hacking industry camp 2017">-->
 
 									<p class="lead"> <strong>54h pour stimuler l'innovation</strong> <br>La quatrième édition du Hackathon dédié à l'Industrie en Alsace <br>54h pour innover et inventer l'industrie 4.0
-									<span style="font-style: normal;font-size: 17px; padding-top: 6px;"><br>
+									<!--<span style="font-style: normal;font-size: 17px; padding-top: 6px;"><br>
 										<strong>Jetez un coup d'oeil aux éditions précédentes : </strong> 
 										<a href="http://2017.hackingindustry.camp/" target="_blank">2017</a> - 
 										<a href="http://2016.hackingindustry.camp/" target="_blank">2016</a>
-									</span>
+									</span>-->
 
 								</div>
 
@@ -261,9 +278,9 @@
 									</ul>
 		
 									<div class="hero-buttons col-md-12 text-center">
-										<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a> <a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>
-										<!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
-										<a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>-->
+										<!--<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a> <a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>-->
+										<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
+										<a href="https://www.facebook.com/media/set/?set=a.2435765016438332&type=1&l=95c9249061" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>
 										<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
 										<!--<button disabled="disabled" class="btn btn-default">La billeterie ouvre bientôt !</button>-->
 									</div>
@@ -417,12 +434,12 @@
 
 				<div class="container">
 					<div class="row">
-						<!--<div class="col-md-12">
-							<h3 class="closing-shout">L'événement #HICamp 2017 est fini, revivez l'événement à travers les photos prises par nos bénévoles !</h3>
+						<div class="col-md-12">
+							<h3 class="closing-shout">L'événement #HICamp 2018 est fini, revivez l'événement à travers les photos prises par nos bénévoles !</h3>
 
-							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260"class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>
-						</div>-->
-						<div class="col-md-6">
+							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="https://www.facebook.com/media/set/?set=a.2435765016438332&type=1&l=95c9249061"class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>
+						</div>
+						<!--<div class="col-md-6">
 							<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
 
 							<div class="closing-buttons" data-animation="tada"><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary">J'y vais !</a></div>
@@ -431,7 +448,7 @@
 							<h3 class="closing-shout">Inscris ? Consultez dès à présent la liste des défis, vous pouvez également proposer le vôtre !</h3>
 
 							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hic2018.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
-						</div>
+						</div>-->
 					</div>
 				</div>
 
@@ -442,7 +459,6 @@
 			<!-- HEADLINE
 			================================= -->
 			<section id="headline" class="headline-section section">
-
 				<div class="container">
 					
 					<div class="row">
@@ -548,7 +564,7 @@
 							<p style="margin-bottom: 0;">Keynote de Teddy Wilhelm, Ingénieur expert en design thinking chez <a href="https://www.impact-positif.fr/" target="_blank">Impact Positif</a></p><br>
 							<p>Organisée avec &nbsp;<a href="https://www.creaccro.eu/" target="_blank"><img style="height: 35px;" src="images/contents/creaccro-h.jpg" alt="Creaccro"></a></p>
 
-							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-1-hic-design-et-industrie-un-mariage-impossible-50949601630" target="_blank" class="btn btn-primary">J'y vais !</a></div>
+							<!-- <div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-1-hic-design-et-industrie-un-mariage-impossible-50949601630" target="_blank" class="btn btn-primary">J'y vais !</a></div> -->
 						</div>
 
 						<div class="about-text col-md-4">
@@ -567,7 +583,7 @@
 							</p>
 							<!--<p>Conférence suivie d'une collation, organisée en partenariat avec <a href="http://alsace.cci.fr/" target="_blank"><img style="height: 33px;" src="images/contents/ccialsace.jpg" alt="CCI Alsace"></a></p>-->
 
-							<div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-2-hic-les-principes-des-organisations-exponentielles-50950018878" target="_blank" class="btn btn-primary">J'y vais !</a></div>
+							<!-- <div style="margin-bottom: 50px; margin-top: 20px;"><a href="https://www.eventbrite.fr/e/billets-conference-2-hic-les-principes-des-organisations-exponentielles-50950018878" target="_blank" class="btn btn-primary">J'y vais !</a></div> -->
 						</div>
 
 						<div class="about-text col-md-4">
@@ -590,7 +606,7 @@
 								Keynote de Patrick Meyer, IA Technical Leader pour le Groupe Sopra Steria<br>
 							</p>
 							<p><a href="https://www.soprasteria.com/" target="_blank"><img style="height: 33px;" src="images/contents/sopra.jpg" alt="Sopra Steria"></a></p>
-							<div style="margin-bottom: 50px; margin-top: 0px;"><a href="https://www.eventbrite.fr/e/billets-conference-3-hic-lia-dans-lindustrie-40-51007353367" target="_blank" class="btn btn-primary">J'y vais !</a></div>
+							<!--<div style="margin-bottom: 50px; margin-top: 0px;"><a href="https://www.eventbrite.fr/e/billets-conference-3-hic-lia-dans-lindustrie-40-51007353367" target="_blank" class="btn btn-primary">J'y vais !</a></div>-->
 						</div>
 
 					</div>
@@ -1282,6 +1298,13 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix BLOCKCHAIN VALLEY</h3>
+									<!--<p></p>-->
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix CREACCRO</h3>
 									<!--<p></p>-->
 								</div>
 							</div>
